# EYEHEALTHBACKEND

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
AdminHub/: apps.py  urls.py
AdminHub/forms/: offers.py
AdminHub/templates/: base.html  dashboard.html  login.html  message.html  pagination.html  side_bar.html  users.html
AdminHub/templatetags/: custom_filters.py
AdminHub/views/: auth.py  dashbord.py  eye_exam.py  home.py  offers.py  prescription.py  settings.py  subscription.py  users.py
admin_panel/: admin.py  apps.py  decorators.py  models.py  urls.py
admin_panel/forms/: accounts.py  carousels.py  products.py  stores.py  subscription.py
admin_panel/templatetags/: custom_filters.py
admin_panel/views/: auth.py  base.py  business.py  carousels.py  credentials.py  eye_exam.py  eye_test_webhook.py  home.py  my_profile.py  notifications.py  offers.py  prescription.py  products.py  settings.py  static_pages.py  subscription.py  trash.py  user_agreement.py  users.py
ai_doctor/: admin.py  apps.py  gemini.py  prompts.txt  urls.py
ai_doctor/models/: base.py  models.py
ai_doctor/views/: apis.py  base.py
api/: admin.py  seed.py  urls.py
api/models/: __init__.py  accounts.py  (+10 more)
config/: asgi.py  urls.py  wsgi.py
core/: constants.py  logs.py  utils.py
eye_health/: asgi.py  urls.py  wsgi.py
scripts/: add_predefined_prompts.py  initialize_appointment.py  project_setup.py  update_slots.py
store/: __init__.py  admin.py  apis.py  models.py  serializers.py  urls.py  utility.py  views.py
utilities/: core.py  redis_client.py  utils.py
(+144 files in other folders)
