[project]
name = "eyehealthbackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# requires-python = "==3.10"
requires-python = "==3.10.*"
dependencies = [
    "black==24.4.2",
    "django-cors-headers==4.3.1",
    "django-q>=1.3.9",
    "django-redis==5.4.0",
    "django==4.2.13",
    "djangorestframework-simplejwt==5.3.1",
    "djangorestframework==3.15.1",
    "firebase-admin==6.5.0",
    "geopy==2.4.1",
    "google-generativeai==0.8.3",
    "openpyxl==3.0.10",
    "psycopg2-binary==2.9.7",
    "pyotp==2.9.0",
    "python-dotenv==1.0.0",
    "pytz==2024.1",
    "razorpay==1.4.2",
    "setuptools>=75.8.0",
    "stripe==9.7.0",
    "weasyprint==60.2",
]
